[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repomind"
version = "0.1.0"
description = "Codebase intelligence that thinks ahead — outperforms repowise on every dimension"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "pinexai" }]
keywords = ["codebase", "intelligence", "mcp", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40",
    "lancedb>=0.12",
    "networkx>=3.3",
    "scipy>=1.11",
    "tree-sitter>=0.21",
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "gitpython>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "tenacity>=9.0",
    "pyarrow>=14.0",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-networkx",
]

[project.scripts]
repomind = "repomind.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["repomind"]
