[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repobrain"
version = "0.1.1"
description = "Codebase intelligence that thinks ahead — outperforms repowise on every dimension"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Pinaki Mishra", email = "pinaki@pinexai.com" }]
keywords = ["codebase", "intelligence", "mcp", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40",
    "lancedb>=0.12",
    "networkx>=3.3",
    "scipy>=1.11",
    "tree-sitter>=0.21",
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "gitpython>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "tenacity>=9.0",
    "pyarrow>=14.0",
    "openai>=1.50",
]

[project.urls]
Homepage = "https://pinexai.github.io/repobrain"
Repository = "https://github.com/pinexai/repobrain"
Documentation = "https://pinexai.github.io/repobrain"
"Bug Tracker" = "https://github.com/pinexai/repobrain/issues"
Changelog = "https://github.com/pinexai/repobrain/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-networkx",
    "mkdocs-material>=9.5",
    "mkdocs-autorefs>=1.0",
    "twine>=5.0",
    "build>=1.2",
]

[project.scripts]
repobrain = "repomind.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["repomind"]
